Core, Parquet: Allow for Writing Parquet/Avro Manifests in V4 - Parquet by Default
Extends V4 Manifest writer to allow it to write manfiests in either Parquet
or Avro based on the file extension. A default is also added to do Parquet
Manifests in the SDK when the Version is 4. This could be parameterized
later but that will requrie parameterizing the test suites so I decied
on a single format (parquet) for now.

There are a few other requried changes here outside of testing

1. Handling of splitOffsets in Parquet needs to be changed since
BaseFile returns an immutable view which Parquet was attempting to
re-use by clearing.

2. Unpartitioned Tables need special care since parquet cannot store
empty structs in the schema. This means reading from parquet manfiests
means skipping the parquet field and then changing read offsets if the
partition is not defined. The read code is shared between all versions
at this time so this change effects older avro readers as well.

3. Some of the tests code for TestReplacePartitions assumed that you
could validate against a slightly different vesrion of the table. This is
a problem if the table you make is partitioned and the validation table
is unpartitioned. It use to work ... accidently I think because we would
make unpartitioned operations committed to a partitioned table.